--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,3 +1,10 @@
 spring.cloud.config.uri=http://localhost:8012
 
-spring.cloud.config.name=configserver
+#THis make config server look for properties inside this folder name mentioned here.
+spring.application.name=account-service
+
+##account-service
+
+
+
+
